# GatiAI

./: .gitignore  Dockerfile  README.md  agent_evaluator.py  baseline.py  baseline_results.json  demo.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scenarios.py  server.py
tests/: test_agent_evaluator.py  test_environment.py  test_server.py
