[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gatiAI"
version = "1.0.0"
description = "OpenEnv-spec RL environment for training AI agents to handle real-world supply chain disruption scenarios."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "GatiAI Team" }
]
keywords = ["reinforcement-learning", "supply-chain", "openenv", "gym"]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.7.4",
    "websockets>=15.0.1",
    "python-multipart==0.0.9",
    "openai>=2.7.2",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
gatiAI-server = "server:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools]
packages = ["gatiAI"]

[tool.setuptools.package-data]
gatiAI = []
